--- a/src/react/components/Footer/index.scss
+++ b/src/react/components/Footer/index.scss
@@ -1,7 +1,11 @@
 .m-Footer {
 	.time-png {
+		display: inline-block;
 		width: 100px;
 		height: 100px;
 		background: url(./images/time.png) 50% 50%/contain no-repeat;
+	}
+	img {
+		height: 100px;
 	}
 }
