--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -1,6 +1,9 @@
-html, body, #app{
+html, body, :global(#app){
 	margin: 0;
 	padding: 0;
 	width: 100%;
 	height: 100%;
+}
+.m-Footer {
+	display: block;
 }
